Changed viewport on body to 115vh to prevent gap under footer

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -5,7 +5,7 @@ html {
 
 
 body {
-    min-height: 100vh;
+    min-height: 115vh;
 }
 
 footer {
